--- a/output.html
+++ b/output.html
@@ -75,12 +75,12 @@
        </span>
                     </a>
                     <div class="cbp-hrsub">
-                        <div class="cbp-hrsub-inner">
+                        <div class="cbp-hrsub-inner" id='innerfilter'>
                             <div>
                                 <h4>
                                     Button test
                                 </h4>
-                                <ul>
+                                <ul class='filter_flex'>
                                     <div class="filters">
                                         <div class="ui-group">
                                             <a>
@@ -237,13 +237,14 @@
                     <!-- /cbp-hrsub -->
                 </li>
                 <li>
+                    <!-- start: order -->
                     <a href="#">
                         <span class="material-icons-outlined">
         sync_alt
        </span>
                     </a>
                     <div class="cbp-hrsub">
-                        <div class="cbp-hrsub-inner">
+                        <div class="cbp-hrsub-inner" id='innerorder'>
 
                             <!-- RESET
                             <div>
