--- a/output.html
+++ b/output.html
@@ -71,171 +71,51 @@
                 <li>
                     <a href="#">
                         <span button_num="1" class="material-icons-outlined">
-        filter_list
-       </span>
+                            filter_list
+                        </span>
                     </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner" id='innerfilter'>
-                            <div>
-                                <h4>
-                                    Button test
-                                </h4>
-                                <ul class='filter_flex'>
-                                    <div class="filters">
-                                        <div class="ui-group">
-                                            <a>
-             Would the house be touched in the case of sea level rising 5 m.
-            </a>
-                                            <div class="button-group js-radio-button-group" data-filter-group="tsunami_flood_line_buttons">
-                                                <button class="button is-checked" data-filter="">
-              any
-             </button>
-                                                <button class="button" data-filter="tsunami_binary_true">
-              yes
-             </button>
-                                                <button class="button" data-filter="tsunami_binary_false">
-              no
-             </button>
-                                            </div>
-                                        </div>
-                                        <div class="ui-group">
-                                            <a>
-             Neighbourhood
-            </a>
-                                            <div class="button-group js-radio-button-group" data-filter-group="Max amount of bicycle parkings within 15 min. walking radius">
-                                                <button class="button is-checked" data-filter="">
-              any
-             </button>
-                                                <button class="button" data-filter=".0">
-              Mevo'ot Jafo
-             </button>
-                                                <button class="button" data-filter=".4">
-              Jaffa A &amp; College of Tel-Aviv-Yaffo
-             </button>
-                                                <button class="button" data-filter=".10">
-              Neve Sha'anan
-             </button>
-                                                <button class="button" data-filter=".12">
-              Jaffa Center
-             </button>
-                                                <button class="button" data-filter=".12">
-              Jaffa North
-             </button>
-                                                <button class="button" data-filter=".12">
-              Neve Golan
-             </button>
-                                                <button class="button" data-filter=".12">
-              Florentine
-             </button>
-                                                <button class="button" data-filter=".12">
-              Tzahalon &amp; Shikunei Hisachon
-             </button>
-                                                <button class="button" data-filter=".12">
-              Shapira
-             </button>
-                                                <button class="button" data-filter=".12">
-              Tel-Kabirת Neva Ofer, Jaffa B
-             </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </ul>
-                            </div>
-                            <!--TEST -->
+                            <h4>
+                                Filter by:
+                            </h4>
                             <div class="img_filters">
-                                <h4>
-                                    15 minutes city: Amount of...
-                                </h4>
-                                <ul>
+                                <!-- filters container-->
+                                <ul class="filterby_flex">
                                     <li>
                                         <a>
-            Bicycle parkings
-           </a>
+                                                Bicycle parkings
+                                            </a>
                                         <div class="slider" data-filter="bi_parking_min_max_slider" id="bi_parking_slider">
                                         </div>
-                                        <br/>
                                     </li>
+                                    <!-- 
                                     <li>
                                         <a>
-            Tel-o-fun bicycles (max capacity)
-           </a>
+                                            Tel-o-fun bicycles (max capacity)
+                                        </a>
                                         <div class="slider" data-filter="n_tel_o_fun_min_max_slider" id="n_tel_o_fun_slider">
                                         </div>
-                                        <br/>
                                     </li>
                                     <li>
                                         <a>
-            Auto-Tel Car sharing vehicles (max capacity)
-           </a>
-                                        <div class="slider" data-filter="n_auto_tel_min_max_slider" id="n_auto_tel_slider">
+                                            Tel-o-fun bicycles (max capacity)
+                                        </a>
+                                        <div class="slider" data-filter="bi_parking_min_max_slider" id="1">
                                         </div>
-                                        <br/>
-                                    </li>
-                                    <li>
-                                        <a>
-            Green areas and parks
-           </a>
-                                        <div class="slider" data-filter="n_parks_min_max_slider" id="n_parks_slider">
-                                        </div>
-                                        <br/>
-                                    </li>
-                                    <li>
-                                        <a>
-            Playgrounds
-           </a>
-                                        <div class="slider" data-filter="n_playgrounds_min_max_slider" id="n_playgrounds_slider">
-                                        </div>
-                                        <br/>
-                                    </li>
-                                    <li>
-                                        <a>
-            kindergardens
-           </a>
-                                        <div class="slider" data-filter="n_kindergartens_min_max_slider" id="n_kindergartens_slider">
-                                        </div>
-                                        <br/>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!--END class="img_filters"-->
-                            <!--TEST -->
-                            <div>
-                                <h4>
-                                    Misc
-                                </h4>
-                                <div class="img_filters">
-                                    <ul>
-                                        <li>
-                                            <a>
-             Building's ID
-            </a>
-                                            <div class="slider" data-filter="id_min_max_slider" id="id_slider">
-                                            </div>
-                                            <br/>
-                                        </li>
-                                    </ul>
-                                    <h4>
-                                        Control
-                                    </h4>
-                                    <ul>
-                                        <li>
-                                            <a href="#">
-             reset
-            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-             extend options
-            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /cbp-hrsub-inner -->
-                    </div>
-                    <!-- /cbp-hrsub -->
                 </li>
+                                                        -->
+
+                                </ul>
+                                <!-- close class="filterby_flex"-->
+                            </div>
+                            <!-- close class="img_filters"-->
+                        </div>
+                        <!-- close <div class="cbp-hrsub-inner" id='innerfilter'> -->
+                    </div>
+                    <!-- close class="cbp-hrsub"-->
+                </li>
+                <!-- END OF filter part-->
                 <li>
                     <!-- start: order -->
                     <a href="#">
