--- a/output.html
+++ b/output.html
@@ -84,27 +84,33 @@
                                 <ul class="filterby_flex">
                                     <li>
                                         <a>
-                                                Bicycle parkings
-                                            </a>
-                                        <div class="slider" data-filter="bi_parking_min_max_slider" id="bi_parking_slider">
-                                        </div>
-                                    </li>
-                                    <!-- 
-                                    <li>
-                                        <a>
-                                            Tel-o-fun bicycles (max capacity)
+                                            accessibility
                                         </a>
-                                        <div class="slider" data-filter="n_tel_o_fun_min_max_slider" id="n_tel_o_fun_slider">
+                                        <div class="slider" data-filter="accesability_score" id="accesability_score_slider">
                                         </div>
                                     </li>
                                     <li>
                                         <a>
-                                            Tel-o-fun bicycles (max capacity)
+                                            amenities_score
                                         </a>
-                                        <div class="slider" data-filter="bi_parking_min_max_slider" id="1">
+                                        <div class="slider" data-filter="amenities_score" id="amenities_score_slider">
                                         </div>
-                </li>
-                                                        -->
+                                    </li>
+                                    <li>
+                                        <a>
+                                            tourism_score
+                                        </a>
+                                        <div class="slider" data-filter="tourism_score" id="tourism_score_slider">
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a>
+                                            arrnona year
+                                        </a>
+                                        <div class="slider" data-filter="arrnona_year" id="arrnona_year_slider">
+                                        </div>
+                                    </li>
+
 
                                 </ul>
                                 <!-- close class="filterby_flex"-->
