--- a/output.html
+++ b/output.html
@@ -84,21 +84,21 @@
                                 <ul class="filterby_flex">
                                     <li>
                                         <a>
-                                            accessibility
+                                            accessibility score
                                         </a>
                                         <div class="slider" data-filter="accesability_score" id="accesability_score_slider">
                                         </div>
                                     </li>
                                     <li>
                                         <a>
-                                            amenities_score
+                                            amenities score
                                         </a>
                                         <div class="slider" data-filter="amenities_score" id="amenities_score_slider">
                                         </div>
                                     </li>
                                     <li>
                                         <a>
-                                            tourism_score
+                                            tourism score
                                         </a>
                                         <div class="slider" data-filter="tourism_score" id="tourism_score_slider">
                                         </div>
