before remaking building cards

--- a/building_cards/2866.html
+++ b/building_cards/2866.html
@@ -27,9 +27,11 @@
 
 <body>
     <div class='summary-page'>
+        <!-- 
         <span class="material-icons-outlined" id="topRightFixed">
             close
             </span>
+            -->
         <div class="summary">
             <h2>Hanina Ben Dosa 26</h2>
             <p>parcel : 51</p>
@@ -43,15 +45,17 @@
         <div class="carousel-container">
             <img alt="Hanina Ben Dosa 26" photo_num='1' class="center carousel" src="../photos/חנניא-בן-דוסא-26_2866.jpg"> </div>
         <div class="carousel-button">
-            <span class="material-icons-outlined" button_num='1'>radio_button_checked</span>
+            <span class="material-icons-outlined" href="#" button_num='1'>radio_button_checked</span>
         </div>
-        <span class="material-icons-outlined info-button info-summary" id="buttonLeftFixed">info</span>
-        <span class="material-icons-outlined" id="navigate_before">
+        <span class="material-icons-outlined info-button info-summary" href="#" id="buttonLeftFixed">info</span>
+        <span class="material-icons-outlined" id="navigate_before" href="#">
         navigate_before
         </span>
-        <span class="material-icons-outlined navigate_next" id="buttonRightFixed">
+        <a href="#">
+            <span class="material-icons-outlined navigate_next" id="buttonRightFixed" href="#">
         navigate_next
         </span>
+        </a>
     </div>
 
     <div class='detailed-page'>
