changing bind sort button click from the same ID to multiple ID's

--- a/output.html
+++ b/output.html
@@ -180,6 +180,17 @@
              </button>
                                             </div>
                                         </li>
+                                        <li>
+                                            <a>
+    Visible?
+</a>
+                                            <div class="button-group" id="sorts">
+                                                <button class="button" data-sort-by="original-order">
+        original order
+       </button>
+                                            </div>
+
+                                        </li>
                                         <!-- 
                                         <button class="button" data-sort-by="arrnona_year">
                                             arrnona_year
@@ -304,11 +315,8 @@
              evaluation
             </a>
                                             <div class="button-group layout-mode-button-group" id="group-sort">
-                                                <!--
-                                                <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
-                                                  original order
-                                                </button>\
-                                                -->
+
+
                                                 <button class="button" data-group-by="status" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="status">
               status
              </button>
@@ -318,6 +326,14 @@
                                                 <button class="button" data-group-by="general_evaluation" data-is-horizontal="true" data-layout-mode="cellsByColumn" data-sort-by="general_evaluation">
               estimated value
              </button>
+                                            </div>
+                                        </li>
+                                        <li id='hidden_reset_groupby'>
+                                            <a> Visible?</a>
+                                            <div class="button-group layout-mode-button-group" id="group-sort">
+                                                <button checked="checked" class="button is-checked" data-group-by="non" data-layout-mode="fitRows" data-sort-by="original-order">
+                                                    original order
+                                                  </button>
                                             </div>
                                         </li>
                                         <!-- close  class="button-group layout-mode-button-group" id="group-sort" -->
