reseet sortby WIP

--- a/output.html
+++ b/output.html
@@ -152,7 +152,7 @@
                                             <a>
              unit
             </a>
-                                            <div class="button-group" id="sorts">
+                                            <div class="button-group" id="sorts_1">
                                                 <button class="button" data-sort-by="dist_parcel_limit">
               dist. to parcel limit
              </button>
@@ -168,7 +168,7 @@
                                             <a>
              system
             </a>
-                                            <div class="button-group" id="sorts">
+                                            <div class="button-group" id="sorts_2">
                                                 <button class="button" data-sort-by="built_density">
               built density
              </button>
@@ -184,7 +184,7 @@
                                             <a>
     Visible?
 </a>
-                                            <div class="button-group" id="sorts">
+                                            <div class="button-group" id="hidden_reset_sortby">
                                                 <button class="button" data-sort-by="original-order">
         original order
        </button>
