--- a/output.html
+++ b/output.html
@@ -180,11 +180,11 @@
              </button>
                                             </div>
                                         </li>
-                                        <li>
+                                        <li id="hidden_reset_sortby">
                                             <a>
     Visible?
 </a>
-                                            <div class="button-group" id="hidden_reset_sortby">
+                                            <div class="button-group">
                                                 <button class="button" data-sort-by="original-order">
         original order
        </button>
