reset button kinda in place - not really. forced operation not matching between groupby and filter

--- a/output.html
+++ b/output.html
@@ -75,6 +75,11 @@
                     </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner" id="innerfilter">
+                            <a href="#" id="filter_restart">
+                                <span class="material-icons-outlined">
+                                    restart_alt
+                                </span>
+                            </a>
                             <h4>
                                 Filter by:
                             </h4>
@@ -111,11 +116,15 @@
                                     </li>
                                 </ul>
                                 <!-- close class="filterby_flex"-->
+
                             </div>
                             <!-- close class="img_filters"-->
+
                         </div>
+                        <!-- WAS HERE WIP-->
                         <!-- close <div class="cbp-hrsub-inner" id='innerfilter'> -->
                     </div>
+
                     <!-- close class="cbp-hrsub"-->
                 </li>
                 <!-- END OF filter part-->
