--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="./css/about.css" />
 
     <!--To pass variables -->
-    <script src="../js/app.js" type="text/javascript">
+    <script src="./js/app.js" type="text/javascript">
     </script>
     <link href="./css/trans.css" rel="stylesheet" />
     <!-- load leaflet for map-->
