--- a/output - Copy.html
+++ b/output - Copy.html
@@ -38,7 +38,7 @@
     <!-- for about section -->
     <link href="./css/about.css" rel="stylesheet" />
     <!--To pass variables -->
-    <script src="./js/app.js" type="text/javascript">
+    <script src="../js/app.js" type="text/javascript">
     </script>
     <link href="./css/trans.css" rel="stylesheet" />
     <!-- load leaflet for map-->
